force-app/main/default/objects/scan__c/scan__c.object-meta.xml
<CustomObject>
    <label>scan</label>
    <nameField>
        <label>name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>