force-app/main/default/objects/scan__c/fields/cyclecount__c.field-meta.xml
<CustomField>
    <fullName>cyclecount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>cyclecount</label>
    <referenceTo>cyclecount__c</referenceTo>
    <relationshipLabel>scans</relationshipLabel>
    <relationshipName>scans</relationshipName>
    <type>Lookup</type>
</CustomField>