force-app/main/default/objects/scan__c/fields/EPC__c.field-meta.xml
<CustomField>
    <fullName>EPC__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>EPC</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>scans</relationshipLabel>
    <relationshipName>scans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>