force-app/main/default/objects/scan__c/fields/geolocation__c.field-meta.xml
<CustomField>
    <fullName>geolocation__c</fullName>
    <label>geolocation</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>