force-app/main/default/objects/scan__c/fields/Location_Map__c.field-meta.xml
<CustomField>
    <fullName>Location_Map__c</fullName>
    <formula>IF( OR( ISBLANK( geolocation__Latitude__s ) , ISBLANK( geolocation__Longitude__s ) ) , &quot;Missing Coordinates&quot;, IMAGE( Map_Link__c , &quot;&quot;, 300,300))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Map</label>
    <type>Text</type>
</CustomField>