force-app/main/default/objects/scan__c/fields/LocationID__c.field-meta.xml
<CustomField>
    <fullName>LocationID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LocationID</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>scans</relationshipLabel>
    <relationshipName>scans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>