force-app/main/default/objects/scan__c/fields/Scan_time__c.field-meta.xml
<CustomField>
    <fullName>Scan_time__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Scan time</label>
    <type>DateTime</type>
</CustomField>