force-app/main/default/objects/scan__c/fields/Scanned_By__c.field-meta.xml
<CustomField>
    <fullName>Scanned_By__c</fullName>
    <label>Scanned By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>