force-app/main/default/objects/scan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Scan_time__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>